--- a/conf/submit.yaml
+++ b/conf/submit.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_submit
   - hydra/logging
-  - model: convnext-esc50 # Add models or ensembles
+  - model: convnext-green # Add models or ensembles
 
 # Use this when uploading to Kaggle
 
