--- a/conf/model/alternate-ensemble-model.yaml
+++ b/conf/model/alternate-ensemble-model.yaml
@@ -66,6 +66,24 @@ train_sys:
       patience: 15
       batch_size: 64
       model:
+        _target_: src.modules.training.models.alternating_ensemble_model.AlternatingEnsembleModel
+        models:
+          - _target_: src.modules.training.models.pretrained_model.PretrainedModel
+            model:
+              _target_: src.modules.training.models.timm.Timm
+              in_channels: 1
+              out_channels: 182
+              model_name: convnext_tiny
+              activation: sigmoid
+            state_dict_path: "tm/0c28f51639bd8aa18c5ca86c5d3ef453_5_f0.pt"
+          - _target_: src.modules.training.models.pretrained_model.PretrainedModel
+            model:
+              _target_: src.modules.training.models.timm.Timm
+              in_channels: 1
+              out_channels: 182
+              model_name: efficientnet_b0
+              activation: sigmoid
+            state_dict_path: "tm/0c28f51639bd8aa18c5ca86c5d3ef453_5_f1.pt"
 #        _target_: src.modules.training.models.timm.Timm #Ensure that activation is sigmoid for non Logits loss functions.
 #        in_channels: 1
 #        out_channels: 182
