--- a/conf/submit.yaml
+++ b/conf/submit.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_submit
   - hydra/logging
-  - model: convnext-post-power-2 # Add models or ensembles
+  - ensemble: alternating # Add models or ensembles
 
 # Use this when uploading to Kaggle
 
@@ -13,12 +13,12 @@ defaults:
 
 
 # Local paths
-#processed_path: data/processed
-#raw_path: data/raw
-#cache_path: data/cache
-#data_path: data/raw/2024/test_soundscapes/
-#species_path: data/raw/2024/train_audio/
-#result_path: submission
+processed_path: data/processed
+raw_path: data/raw
+cache_path: data/cache
+data_path: data/raw/2024/test_soundscapes/
+species_path: data/raw/2024/train_audio/
+result_path: submission
 
 # KAGGLE TESTING
 # data_path: /kaggle/input/birdclef-2024/unlabeled_soundscapes/
